Added "forced" refresh mode to WorksheetController. Simple (not forced) refresh on LogWorksheetController now ignores cache, forced refresh re-index the source.